--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # DATASOURCE
 spring.datasource.url=jdbc:postgresql://localhost:5432/boilerplate
-spring.datasource.username=postgres
-spring.datasource.password=example
+spring.datasource.username=stan
+spring.datasource.password=testing
 # DDL CONFIGURATION
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
